--- a/index.html
+++ b/index.html
@@ -43,7 +43,34 @@
                 </label>
             </div>
         </section>
-        <section class="outputs-section"></section>
+
+        <section class="outputs-section">
+            <div class="outputs-container">
+                <div class="output">
+                    <div class="text">
+                        <span>Tip Amount</span>
+                        <span>/ person</span>
+                    </div>
+                    <span class="output-value">
+                        $4.27
+                    </span>
+                </div>
+                <div class="output">
+                    <div class="text">
+                        <span>Total</span>
+                        <span>/ person</span>
+                    </div>
+                    <span class="output-value">
+                        $32.79
+                    </span>
+                </div>
+            </div>
+            <div class="reset-container">
+                <button type="submit" class="btn-reset">
+                    RESET
+                </button>
+            </div>
+        </section>
     </main>
 </body>
 
