--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splitter</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" media="(min-width: 800px)" href="./css/desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
@@ -32,11 +33,14 @@
                     <button type="submit">15%</button>
                     <button type="submit">25%</button>
                     <button type="submit">50%</button>
-                    <button id="btn-custom" type="submit">Custom</button>
+                    <input type="number" placeholder="Custom" id="input-custom">
                 </div>
             </div>
             <div class="number-container">
-                <span>Number of People</span>
+                <div id="text-container-error">
+                    <span>Number of People</span>
+                    <span id="error-cero">Can't be cero</span>
+                </div>
                 <label class="input-container">
                     <img src="./images/icon-person.svg" alt="icon-person" title="icon-person">
                     <input type="number" name="user-number" id="user-number">
