--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Splitter</title>
+    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" media="(min-width: 800px)" href="./css/desktop.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,6 +42,7 @@
                     <span>Number of People</span>
                     <span id="error-cero">Can't be cero</span>
                 </div>
+                <!-- <label class="input-container" id="number-input--error"> -->
                 <label class="input-container">
                     <img src="./images/icon-person.svg" alt="icon-person" title="icon-person">
                     <input type="number" name="user-number" id="user-number">
@@ -76,6 +78,7 @@
             </div>
         </section>
     </main>
+    <script src="./js/main.js" type="module"></script>
 </body>
 
 </html>
